2015-09-04  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/integria_cron.php: Fixed an error that not allowed
	the failed mails to update their failed attempts.
	
2015-09-04  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* operation/projects/project_report.php,
	  include/styles/integria.css: Extended the project report
	with new tables of task and workunit info.
	
2015-09-02  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* godmode/usuarios/lista_usuarios.php: Added a checkbox in
	the table head to change the state of all the checkboxes at
	once.
	
	TICKET #2615.
	
2015-09-02  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/js/integria_incident_search.js,
	  operation/incidents/incident_detail.php: Added checks for
	the global type items when using the linked fields and fixed
	other errors.
	
2015-09-02  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* operation/incidents/type_detail.php: Fixes on the ticket
	type item update when selecting the 'global field' option.
	
2015-09-02  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* operation/incidents/incident_type_field.php
	  operation/incidents/type_detail.php: Minor improvements.
	
2015-09-01  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_form.php: Fixed (or improved) the regex
	to transform the plain text links into html links into the
	function 'show_workunit_data'.
	
	* operation/incidents/incident_workunits.php: Improved the
	javascript scope management.
	
2015-09-01  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_db.php,
	  include/functions_incidents.php,
	  include/integria_cron.php: Now the '_access_url_' macro
	is replaced properly when the 'access_public' property exists.

2015-09-01  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/styles/integria.css: Style fix of the fileupload.
	Ticket #2376.
	
2015-09-01  Alejandro Gallardo <alejandro.gallardo@artica.es>
	